fixed issue with not working inputs on ios

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -14,10 +14,10 @@
 *
   box-sizing: border-box
   -webkit-touch-callout: none!important
-  -webkit-user-select: none!important
-  -moz-user-select: none!important
-  -ms-user-select: none!important
-  user-select: none!important
+  -webkit-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
   &::-webkit-scrollbar
     width: 0
@@ -72,19 +72,31 @@ a
     top: 0
     z-index: 3
 
-input
+input, textarea
+  font-family: Poppins, sans-serif
   appearance: none
   outline: none!important
   font-size: 1rem
   border: none
   background-color: unset
   color: var(--text-color)
+  -webkit-user-select: initial
+  -moz-user-select: initial
+  -ms-user-select: initial
+  user-select: initial
+
+input
   &::-webkit-outer-spin-button,
   &::-webkit-inner-spin-button
     -webkit-appearance: none
     margin: 0
     visibility: hidden
 
+textarea
+  width: 100%
+  min-width: 100%
+  max-width: 100%
+  color: var(--text-color)
 // ________________ TOOLS ________________ //
 .a-center
   position: absolute
@@ -222,17 +234,6 @@ input
   background: linear-gradient(0deg, transparent 0%, #1d1d289d 30%, #1d1d28 100%)
   z-index: 3
 
-textarea
-  appearance: none
-  font-family: Poppins, sans-serif
-  width: 100%
-  min-width: 100%
-  max-width: 100%
-  border: none
-  outline: none!important
-  font-size: 1rem
-  background-color: unset
-  color: var(--text-color)
 
 .btn
   position: relative
